--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Cairo|Comfortaa&display=swap');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Comfortaa', cursive;
 }
 
 main {
@@ -62,4 +64,25 @@ header h1 {
 .button:hover{
   transform: translateY(-2px);
   background: azure;
+}
+
+img{
+  border-radius: 20px;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  font-size: 1.2rem;
+}
+
+input{
+  padding: 1%;
+  margin: 1.5%;
+  border-radius: 5px;
+  width: 200px;
+  background: lightcyan;
 }
